--- a/LA1/README.mkd
+++ b/LA1/README.mkd
@@ -13,7 +13,7 @@ This firmware allows for your ESP32S3 to be properly provisioned and be updated 
 ***2. Breadboard setup***
  - Setup the breadboard as indicated by the image below.
 
- ![screenshot](breadboard.png)
+ ![screenshot](breadboard.jpg)
  
  - Connect the LEDS to the following GPIO pins from the furthest LED to the closest [10,11,12,13,14,15,6,9]
 
